# TalentIQ

./: .gitignore  README.md  app.py  streamlit_app.py
.devcontainer/: devcontainer.json
app/: main.py
app/core/: config.py
app/routers/: evaluation.py  job.py  resume.py
backend/: PROJECT_STRUCTURE.md  app.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/endpoints/: job.py  resume.py
backend/app/core/: config.py
backend/app/db/: base_class.py  session.py
backend/app/db/models/: evaluation.py  job.py  resume.py  user.py
backend/app/repositories/: base.py
backend/app/routers/: evaluation.py  job.py  resume.py
backend/app/schemas/: evaluation.py  job.py  resume.py  user.py
backend/app/services/: evaluation_service.py  file_service.py  job_service.py  resume_service.py  skills_extraction_service.py  text_extraction_service.py
backend/app/utils/: logger.py
frontend/: main.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/components/: ui.py
frontend/pages/: candidate_comparison.py  resume_analysis.py  resume_analysis_new.py  settings.py
frontend/styles/: modern.css  tailwind.css
frontend/utils/: api.py  ui.py  visualizations.py
